<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.hjm.fileprovidersample.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/internal_storage_content_uri" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.hjm.fileprovidersample.MainActivity">

        <Button
            android:id="@+id/internalLine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/line_camera" />

        <Button
            android:id="@+id/internalQuick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quickpic" />

        <Button
            android:id="@+id/internalPhotos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/photos" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/external_storage_content_uri" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.hjm.fileprovidersample.MainActivity">


        <Button
            android:id="@+id/externalLine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/line_camera" />

        <Button
            android:id="@+id/externalQuick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quickpic" />

        <Button
            android:id="@+id/externalPhotos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/photos" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/internal_storage_file_uri" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.hjm.fileprovidersample.MainActivity">

        <Button
            android:id="@+id/internalFileLine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/line_camera" />

        <Button
            android:id="@+id/internalFileQuick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quickpic" />

        <Button
            android:id="@+id/internalFilePhotos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/photos" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/external_storage_file_uri" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.hjm.fileprovidersample.MainActivity">


        <Button
            android:id="@+id/externalFileLine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/line_camera" />

        <Button
            android:id="@+id/externalFileQuick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quickpic" />

        <Button
            android:id="@+id/externalFilePhotos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/photos" />
    </LinearLayout>

</LinearLayout>
